--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
+
+
     <!-- SEO Meta Tags -->
     <meta name="description"
         content="Sync is a landing page HTML template built with Bootstrap 4 for presenting mobile apps to the online audience and for getting visitors to become users.">
@@ -250,7 +252,7 @@
 
 
     <!-- slider -->
-    <section class="relative bg-indigo-lightest-10">
+   <!--  <section class="relative bg-indigo-lightest-10">
         <div id="slider-1">
             <div class="p-10 md-p-l10 flex justify-center items-center flex-column text-center">
                 <h2 class="white fs-l3 fw-900">Lorem ipsum dolor sit amet, consectetur</h2>
@@ -279,9 +281,7 @@
                     class="next mr-10 br-round border-indigo-lightest indigo-lightest  bg-transparent flex justify-center items-center p-2  focus-indigo-lighter outline-none"><i
                         data-feather="chevron-right"></i></button></li>
         </ul>
-    </section>
-
-
+    </section> -->
 
 
 
@@ -289,13 +289,13 @@
 
 
     <!-- big text -->
-    <section class="p-10 md-py-10">
+   <!--  <section class="p-10 md-py-10">
         <div class="w-100pc md-w-70pc mx-auto py-10">
             <h2 class="white fs-l2 md-fs-xl1 fw-900 lh-2">
                 Lorem ipsum dolor sit amet, <span class="border-b bc-indigo bw-4"> consectetur</span> adipiscing elit,
                 sed do eiusmod tempor </h2>
         </div>
-    </section>
+    </section> -->
 
 
 
@@ -304,7 +304,7 @@
 
 
     <!-- product options -->
-    <section class="py-l10">
+    <!-- <section class="py-l10">
         <div class="flex flex-column md-flex-row md-w-80pc mx-auto">
             <div class="w-100pc md-w-50pc">
                 <div class="br-8 p-5 m-5 bg-indigo-lightest-10 pointer hover-scale-up-1 ease-300">
@@ -328,7 +328,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
@@ -338,7 +338,7 @@
 
 
     <!-- pricing -->
-    <section id="pricing">
+    <!-- <section id="pricing">
         <div class="p-10 flex flex-wrap">
             <div class="w-100pc md-w-50pc">
                 <div class="p-5">
@@ -460,7 +460,7 @@
             </div>
         </div>
     </section>
-
+ -->
 
 
 
@@ -469,7 +469,7 @@
 
 
     <!-- testimonials -->
-    <section class="p-10 md-p-l5">
+    <!-- <section class="p-10 md-p-l5">
         <div id="slider-2">
             <div class="px-3">
                 <div class="p-8 br-8 bg-indigo-lightest-10 relative">
@@ -533,10 +533,10 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
     <!-- featured blog -->
-    <section class="p-10 md-p-l10">
+   <!--  <section class="p-10 md-p-l10">
         <div class="md-w-75pc">
             <h2 class="white fs-l3 fw-900 lh-1">Lorem ipsum dolor sit amet, consectetur</h2>
             <p class="indigo-lightest fw-600 fs-m1 opacity-50 my-5">Lorem ipsum dolor sit amet, consectetur adipiscing
@@ -548,7 +548,7 @@
                 class="bg-white black px-5 py-3 absolute right-0 bottom-0 hover-bg-black hover-white ease-500 flex justify-center items-center after-arrow-right no-underline fs-m1"></a>
         </div>
 
-    </section>
+    </section> -->
 
 
 
@@ -561,7 +561,7 @@
 
 
     <!-- blog -->
-    <section class="p-0 md-p-5">
+    <!-- <section class="p-0 md-p-5">
         <div class="flex flex-wrap">
             <div class="w-100pc md-w-33pc p-10">
                 <a href="#" class="block no-underline p-5 br-8 hover-bg-indigo-lightest-10 hover-scale-up-1 ease-300">
@@ -592,7 +592,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
 
 
@@ -604,7 +604,7 @@
 
 
     <!-- subscribe -->
-    <section class="p-10 md-p-l5">
+    <!-- <section class="p-10 md-p-l5">
         <div class="br-8 bg-indigo-lightest-10 p-5 md-p-l5 flex flex-wrap md-justify-between md-items-center">
             <div class="w-100pc md-w-33pc">
                 <h2 class="white fs-m4 fw-800">Try Hook today</h2>
@@ -620,7 +620,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
@@ -638,51 +638,28 @@
             <div class="md-w-25pc mb-10">
                 <img src="assets/images/logo.png" class="w-l5" alt="">
                 <div class="white opacity-70 fs-s2 mt-4 md-pr-10">
-                    <p>Soluta voluptate et optio. Eos quasi impedit sapiente aliquid eius eligendi at. Necessitatibus
-                        magni et sed quod quas minima.</p>
+                    <p>apple dev academy.</p>
                     <br>
-                    <p>Soluta voluptate et optio. Eos quasi impedit sapiente aliquid eius eligendi at. Necessitatibus
-                        magni et sed quod quas minima.</p>
+                    <p>샬라샬라.</p>
                 </div>
             </div>
             <div class="w-100pc md-w-50pc">
                 <div class="flex justify-around">
                     <div class="w-33pc md-px-10 mb-10">
-                        <h5 class="white">Company</h5>
+                        <h5 class="white">Team</h5>
                         <ul class="list-none mt-5 fs-s2">
                             <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">About
                                     Us</a></li>
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">Jobs</a>
-                            </li>
-                            <li class="my-3"><a href="#"
-                                    class="white opacity-70 no-underline hover-underline">Contact</a></li>
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">Media</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="w-33pc md-px-10 mb-10">
-                        <h5 class="white">Product</h5>
-                        <ul class="list-none mt-5 fs-s2">
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">About
-                                    Us</a></li>
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">Jobs</a>
-                            </li>
-                            <li class="my-3"><a href="#"
-                                    class="white opacity-70 no-underline hover-underline">Contact</a></li>
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">Media</a>
+                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">팀원</a>
                             </li>
                         </ul>
                     </div>
                     <div class="w-33pc md-px-10 mb-10">
                         <h5 class="white">Support</h5>
                         <ul class="list-none mt-5 fs-s2">
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">About
+                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">1대1 문의
                                     Us</a></li>
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">Jobs</a>
-                            </li>
-                            <li class="my-3"><a href="#"
-                                    class="white opacity-70 no-underline hover-underline">Contact</a></li>
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">Media</a>
+                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">e-mail</a>
                             </li>
                         </ul>
                     </div>
@@ -694,14 +671,6 @@
                         class="input flex-grow-1 bw-0 fw-200 bg-indigo-lightest-10 white ph-indigo-lightest focus-white opacity-80 fs-s3 py-5 br-r-0"
                         placeholder="Email Address">
                     <button class="button bg-indigo indigo-lightest fw-300 fs-s3 br-l-0">Start</button>
-                </div>
-                <div class="flex justify-around my-8">
-                    <a href="#" class="relative p-5 bg-indigo br-round white hover-scale-up-1 ease-400"><i
-                            data-feather="twitter" class="absolute-center h-4"></i></a>
-                    <a href="#" class="relative p-5 bg-indigo br-round white hover-scale-up-1 ease-400"><i
-                            data-feather="facebook" class="absolute-center h-4"></i></a>
-                    <a href="#" class="relative p-5 bg-indigo br-round white hover-scale-up-1 ease-400"><i
-                            data-feather="instagram" class="absolute-center h-4"></i></a>
                 </div>
             </div>
         </div>
