--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                                         <img class="img-fluid" src="assets/images/333.jpg" alt="alternative">
                                     </a>
                                 </div>
-                                <!-- end of slide -->
+                                <!-- end of slide  -->
 
-                                <!-- Slide -->
+                                <!-- Slide  -->
                                 <div class="swiper-slide">
                                     <a href="assets/images/444.jpg" class="popup-link" data-effect="fadeIn">
                                         <img class="img-fluid" src="assets/images/444.jpg" alt="alternative">
@@ -220,7 +220,7 @@
                                 </div>
                                 <!-- end of slide -->
 
-                                <!-- Slide -->
+                                <!-- Slide  -->
                                 <div class="swiper-slide">
                                     <a href="assets/images/888.png" class="popup-link" data-effect="fadeIn">
                                         <img class="img-fluid" src="assets/images/888.png" alt="alternative">
@@ -640,7 +640,7 @@
                 <div class="white opacity-70 fs-s2 mt-4 md-pr-10">
                     <p>apple dev academy.</p>
                     <br>
-                    <p>샬라샬라.</p>
+                    <p>샬라샬라 적을거 수정.</p>
                 </div>
             </div>
             <div class="w-100pc md-w-50pc">
@@ -650,7 +650,7 @@
                         <ul class="list-none mt-5 fs-s2">
                             <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">About
                                     Us</a></li>
-                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">팀원</a>
+                            <li class="my-3"><a href="#" class="white opacity-70 no-underline hover-underline">팀원소개</a>
                             </li>
                         </ul>
                     </div>
