--- a/index.html
+++ b/index.html
@@ -640,9 +640,12 @@
                 <div class="white opacity-70 fs-s2 mt-4 md-pr-10">
                     <p>apple dev academy.</p>
                     <br>
-                    <p>샬라샬라 적을거 수정.</p>
+                    <p>샬라샬라 적을거 수정해야함.</p>
                 </div>
             </div>
+            
+
+
             <div class="w-100pc md-w-50pc">
                 <div class="flex justify-around">
                     <div class="w-33pc md-px-10 mb-10">
